kube-prometheus/custom/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    konghq.com/plugins: ip-restriction-admin-ip
    external-dns.alpha.kubernetes.io/hostname: grafana.kzwolenik.com
spec:
  ingressClassName: kong
  rules:
    - host: grafana.kzwolenik.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: grafana
                port:
                  number: 3000
